0.13.2.AP (PRE-RELEASE):
-----------------------
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * Hence the `ProtectNVRAM` feature is not applied to such loaders
  * The `grub` loader was already accounted for
- Improve OS Boot Filtering
  * The `OSType` flag is now taken into account
- Amends Default Loader Scan for APFS Support Volumes
  * APFS Recovery Volumes are handled as Mac Recovery Tools
  * These are now added to the DontScanVolume list by default
  * APFS `Update` and `VM` volumes are similarly added
- Amends Scan for `.VolumeIcons` and `VolumeBadges`
  * Volumes in the `DontScanVolume` list are now skipped
- Amends System Table Reallocations
  * No longer copies memory
  * Some Mac models fail to boot with this following recent firmware updates
- Amends 'HandleProtocol' Stashing
  * No longer stashes and restores HandleProtocol on 'OcProvideConsoleGop' call


0.13.2.AN (08 Feb 2022):
-----------------------
- Multiple Misc Stability Fixes
  * Major refactoring and restructuring for improved stability
  * Also applied to filesystem drivers
- Adds `SupplyUEFI` Feature
  * Adds an implementation of the `CreateEventEx` feature to EFI 1.x units
  * Additionally, the EFI Revision is modified to present as UEFI 2.3
  * This allows the use of UEFI 2.x tools and drivers on Legacy EFI 1.x units in many cases
  * This is particularly the case on Legacy Macs, which already have amended EFI 1.x implementations
  * This functionality can be disabled by setting the `decline_uefiemulate` token
  * As an aside, the `RuntimeServices` table is now also amended in `AmendSysTable`
- Adds `SilentBoot` Feature
  * RefindPlus inherited a mode where a default selection was run after an instant timeout
  * A shortcut key for a loader could also be pressed to run that particular loader instead
  * This mode is activated by setting the `timeout` config token to `-1`